Issue #369 style: Change scrollbar-thumb and scrollbar-track color

--- a/app/styles/content-editor.css
+++ b/app/styles/content-editor.css
@@ -123,22 +123,21 @@ body {
 }
 
 ::-webkit-scrollbar {
-    width: 6px;
+    width: 5px;
     height: 6px;
-    background-color: #F5F5F5;
+    background-color: #d8d8d8;
 }
 
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 5px;
-    background-color: #F5F5F5;
+    background-color: #ffffff;
 }
 
 ::-webkit-scrollbar-thumb {
     border-radius: 5px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-    background-color: #555;
+    background-color: #d8d8d8;
 }
+
 /* main container grid related styles */
 #geniecontrols {
     border: none;
